# trains_xway

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.c.0C67FBBA58DCAEA3.idx
include/: commande_train.h  train.h  train_control.h  xway_msg.h  xway_packet.h  xway_pkg.h  xway_tcp.h
src/: commande_train.c  main.c  train.c  train_control.c  xway_msg.c  xway_pkg.c  xway_tcp.c
